# primalSpring

./: .cursorignore  .gitignore  .rustfmt.toml  ARCHITECTURE.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
ecoPrimal/: Cargo.toml  build.rs
ecoPrimal/data/sovereign-onion/: db  snap.00000000000001F1
ecoPrimal/examples/: gen_checksums.rs
ecoPrimal/src/: cast.rs  checksums.rs  deploy.rs  env_keys.rs  lib.rs  niche.rs  primal_names.rs
ecoPrimal/src/bonding/: content_distribution.rs  graph_metadata.rs  ionic.rs  ionic_rpc.rs  ionic_runtime.rs  mod.rs  stun_tiers.rs  tests.rs
ecoPrimal/src/btsp/: mod.rs  phase3.rs
ecoPrimal/src/certification/: bare.rs  bonding.rs  btsp.rs  cellular.rs  crypto_bootstrap.rs  entropy.rs  health.rs  lifecycle.rs  mod.rs
ecoPrimal/src/composition/: btsp.rs  context.rs  context_discovery.rs  context_helpers.rs  mesh.rs  mod.rs  neural_dispatch.rs  neural_routing.rs  parity.rs  routing.rs  tests.rs
ecoPrimal/src/composition/neural_dispatch/: metrics.rs  mod.rs  perceptron.rs  pipeline.rs
ecoPrimal/src/coordination/: mod.rs  probes.rs
ecoPrimal/src/deploy/: mod.rs  profiles.rs  self_refresh.rs  tests.rs  validation.rs
ecoPrimal/src/emergent/: mod.rs
ecoPrimal/src/evolution/: convergence.rs  fitness.rs  gate.rs  mod.rs  pressure.rs  profile.rs  report.rs  target.rs
ecoPrimal/src/genetics/: mito_beacon.rs  mod.rs  nuclear.rs  rpc.rs  tag.rs
ecoPrimal/src/graphs/: mod.rs
ecoPrimal/src/harness/: mod.rs  tests.rs
ecoPrimal/src/inference/: mod.rs
ecoPrimal/src/ipc/: btsp_handshake.rs  capability.rs  client.rs  discover.rs  dispatch.rs  error.rs  error_tests.rs  extract.rs  mcp.rs  method_gate.rs  methods.rs  mod.rs  neural_bridge.rs  platform.rs  probes.rs  proptest_ipc.rs  protocol.rs  provenance.rs  resilience.rs  server_bind.rs  signal_accept.rs  tcp.rs  transport.rs  verifiers.rs
ecoPrimal/src/launcher/: biomeos.rs  discovery.rs  mod.rs  profiles.rs  spawn.rs  tests.rs
ecoPrimal/src/soundstage/: anchor.rs  capture.rs  channel.rs  comparator.rs  mod.rs  session.rs
ecoPrimal/src/tolerances/: ipc.rs  latency.rs  mod.rs  parity.rs  platform.rs  ports.rs  validation.rs
ecoPrimal/src/validation/: dependency.rs  helpers.rs  live_mesh.rs  mod.rs  numeric.rs  or_exit.rs  shadow.rs  sink.rs  tests.rs
ecoPrimal/src/validation/scenarios/: covalent_mesh_trust.rs  membrane_hosts.rs  mod.rs  registry.rs  s_agentic_tower.rs  s_arch_fitness.rs  s_atomic_compositions.rs  s_atomic_signals.rs  s_barracuda_precision.rs  s_beardog_fido2.rs  s_beardog_startup_contract.rs  s_bearer_token_auth.rs  s_biomeos_local_composition.rs  s_biomeos_neural_api.rs  (+197 more)
ecoPrimal/tests/: compose_compute.rs  compose_nest.rs  compose_node.rs  server_contract_stubs.rs  server_ecosystem.rs  server_ecosystem_compose.rs  server_ecosystem_genetics.rs  server_ecosystem_overlay.rs  server_ecosystem_songbird.rs  server_integration.rs
ecoPrimal/tests/integration/: mod.rs  stub_harness.rs
experiments/exp003_nest_atomic/: Cargo.toml
experiments/exp003_nest_atomic/src/: main.rs
experiments/exp004_full_nucleus/: Cargo.toml
experiments/exp004_full_nucleus/src/: main.rs
experiments/exp006_startup_ordering/: Cargo.toml
experiments/exp006_startup_ordering/src/: main.rs
experiments/exp011_parallel_graph/: Cargo.toml
experiments/exp011_parallel_graph/src/: main.rs
experiments/exp012_conditional_dag/: Cargo.toml
experiments/exp012_conditional_dag/src/: main.rs
experiments/exp013_pipeline_streaming/: Cargo.toml
experiments/exp013_pipeline_streaming/src/: main.rs
experiments/exp015_pathway_learner/: Cargo.toml
experiments/exp015_pathway_learner/src/: main.rs
experiments/exp023_rpgpt_session/: Cargo.toml
experiments/exp023_rpgpt_session/src/: main.rs
experiments/exp030_covalent_bond/: Cargo.toml
experiments/exp030_covalent_bond/src/: main.rs
experiments/exp032_plasmodium_formation/: Cargo.toml
experiments/exp032_plasmodium_formation/src/: main.rs
experiments/exp040_cross_spring_data_flow/: Cargo.toml
experiments/exp040_cross_spring_data_flow/src/: main.rs
experiments/exp041_provenance_trio_science/: Cargo.toml
experiments/exp041_provenance_trio_science/src/: main.rs
experiments/exp044_squirrel_ai_coordination/: Cargo.toml
experiments/exp044_squirrel_ai_coordination/src/: main.rs
experiments/exp050_compute_triangle/: Cargo.toml
experiments/exp050_compute_triangle/src/: main.rs
experiments/exp051_socket_discovery_sweep/: Cargo.toml
experiments/exp051_socket_discovery_sweep/src/: main.rs
experiments/exp052_protocol_escalation/: Cargo.toml
experiments/exp052_protocol_escalation/src/: main.rs
experiments/exp054_bearer_token_auth/: Cargo.toml
experiments/exp054_bearer_token_auth/src/: main.rs
experiments/exp056_cross_tower_federation/: Cargo.toml
experiments/exp056_cross_tower_federation/src/: main.rs
experiments/exp059_weak_force_isolation/: Cargo.toml
experiments/exp059_weak_force_isolation/src/: main.rs
experiments/exp063_pixel_tower_rendezvous/: Cargo.toml
experiments/exp063_pixel_tower_rendezvous/src/: main.rs
experiments/exp070_squirrel_cross_primal_discovery/: Cargo.toml
experiments/exp070_squirrel_cross_primal_discovery/src/: main.rs
experiments/exp072_data_federation/: Cargo.toml
experiments/exp072_data_federation/src/: main.rs
experiments/exp077_squirrel_neural_api_bridge/: Cargo.toml
experiments/exp077_squirrel_neural_api_bridge/src/: main.rs
experiments/exp080_cross_spring_ecology_live/: Cargo.toml
experiments/exp080_cross_spring_ecology_live/src/: main.rs
experiments/exp083_federation_edge_cases/: Cargo.toml
experiments/exp083_federation_edge_cases/src/: main.rs
experiments/exp084_provenance_adversarial/: Cargo.toml
experiments/exp084_provenance_adversarial/src/: main.rs
experiments/exp086_genetic_identity_e2e/: Cargo.toml
experiments/exp086_genetic_identity_e2e/src/: main.rs
experiments/exp087_neural_api_routing_e2e/: Cargo.toml
experiments/exp087_neural_api_routing_e2e/src/: main.rs
(+961 files in other folders)
