# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "primalspring"
version = "0.9.17"
edition.workspace = true
rust-version.workspace = true
authors = ["ecoPrimals"]
license.workspace = true
description = "Coordination and composition validation — primal atomics, graph execution, emergent systems, bonding"
repository = "https://github.com/syntheticChemistry/primalSpring"
keywords = ["coordination", "composition", "nucleus", "biomeos", "testing"]
categories = ["science", "command-line-utilities"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
hmac = "0.13.0"
sha2 = "0.11.0"
hkdf = "0.13.0"
base64 = "0.22.1"
getrandom = "0.4.2"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"
blake3 = "1"

[lints]
workspace = true

[[bin]]
name = "primalspring_primal"
path = "src/bin/primalspring_primal/main.rs"

[[bin]]
name = "validate_all"
path = "src/bin/validate_all/main.rs"

[[bin]]
name = "primalspring_guidestone"
path = "src/bin/primalspring_guidestone/main.rs"

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.27.0"
