# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "primalspring"
version = "0.9.32"
edition.workspace = true
rust-version.workspace = true
authors = ["ecoPrimals"]
license.workspace = true
description = "NUCLEUS evolution arena — composition validation, certification, and primal coordination probing"
repository = "https://github.com/syntheticChemistry/primalSpring"
keywords = ["coordination", "composition", "nucleus", "biomeos", "testing"]
categories = ["science", "command-line-utilities"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
hmac = "0.13.0"
sha2 = "0.11.0"
hkdf = "0.13.0"
getrandom = "0.4.2"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
chacha20poly1305 = "0.10"


[lints]
workspace = true

[[bin]]
name = "primalspring_unibin"
path = "src/bin/primalspring/main.rs"

[[bin]]
name = "nucleus_launcher"
path = "src/bin/nucleus_launcher/main.rs"

[features]
stub-primals = []

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3.27.0"
