# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "primalspring-exp013"
version = "0.9.25"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp013_pipeline_streaming"
path = "src/main.rs"

[dependencies]
primalspring = { path = "../../ecoPrimal" }

[lints]
workspace = true
