# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "primalspring-exp023"
version = "0.9.25"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp023_rpgpt_session"
path = "src/main.rs"

[dependencies]
primalspring = { path = "../../ecoPrimal" }

[lints]
workspace = true
