# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "primalspring-exp030"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp030_covalent_bond"
path = "src/main.rs"

[dependencies]
primalspring = { path = "../../ecoPrimal" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
