# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "primalspring-exp056"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp056_cross_tower_federation"
path = "src/main.rs"

[dependencies]
primalspring = { path = "../../ecoPrimal" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
