# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "primalspring-exp084"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp084_provenance_adversarial"
path = "src/main.rs"

[dependencies]
primalspring = { path = "../../ecoPrimal" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
