# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "primalspring-exp086"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp086_genetic_identity_e2e"
path = "src/main.rs"

[dependencies]
primalspring = { path = "../../ecoPrimal" }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22"

[lints]
workspace = true
