# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "primalspring-exp087"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp087_neural_api_routing_e2e"
path = "src/main.rs"

[dependencies]
primalspring = { path = "../../ecoPrimal" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
